# zNes

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  main.c  mainwindow.cpp  mainwindow.h  mos6502.cpp  mos6502.h  nes6502.asm
old/: Makefile  main.c  main.cpp  mainwindow.ui  nes6502.c  nes6502.h  ui_mainwindow.h  zNes.pro
src/: apu.c  apu.h  bus.c  bus.h  cartridge.c  cartridge.h  cpu.c  cpu.h  forward.h  main.c  ppu.c  ppu.h  ringbuffer.c  ringbuffer.h
src/mappers/: mapper.c  mapper.h  mapper_000.c  mapper_000.h  mapper_002.c  mapper_002.h
